// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav with List shallow renders and matches snapshot 1`] = `
<NavList
  displayEmpty={true}
  displaySkipped={true}
  entries={
    Array [
      Object {
        "category": "multitest",
        "description": null,
        "entries": Array [
          Object {
            "category": "testsuite",
            "description": null,
            "entries": Array [
              Object {
                "category": "testcase",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:11.010098+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:11.010094+00:00",
                  },
                ],
                "logs": Array [],
                "name": "test_equality_passing",
                "status": "passed",
                "status_override": null,
                "tags": Object {
                  "colour": Array [
                    "white",
                  ],
                },
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:11.132214+00:00",
                      "start": "2018-10-15T14:30:11.010072+00:00",
                    },
                  ],
                },
                "type": "TestCaseReport",
                "uid": "736706ef-ba65-475d-96c5-f2855f431028",
              },
              Object {
                "category": "testcase",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:11.510098+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:11.510094+00:00",
                  },
                ],
                "logs": Array [],
                "name": "test_equality_passing2",
                "status": "failed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:11.632214+00:00",
                      "start": "2018-10-15T14:30:11.510072+00:00",
                    },
                  ],
                },
                "type": "TestCaseReport",
                "uid": "78686a4d-7b94-4ae6-ab50-d9960a7fb714",
              },
            ],
            "logs": Array [],
            "name": "AlphaSuite",
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "timer": Object {
              "run": Array [
                Object {
                  "end": "2018-10-15T14:30:11.158224+00:00",
                  "start": "2018-10-15T14:30:11.009872+00:00",
                },
              ],
            },
            "type": "TestGroupReport",
            "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
          },
          Object {
            "category": "testsuite",
            "description": null,
            "entries": Array [
              Object {
                "category": "testcase",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:11.010098+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:11.010094+00:00",
                  },
                ],
                "logs": Array [],
                "name": "test_equality_passing",
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:11.132214+00:00",
                      "start": "2018-10-15T14:30:11.010072+00:00",
                    },
                  ],
                },
                "type": "TestCaseReport",
                "uid": "8865a23d-1823-4c8d-ab37-58d24fc8ac05",
              },
            ],
            "logs": Array [],
            "name": "BetaSuite",
            "status": "passed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "client",
              ],
            },
            "timer": Object {
              "run": Array [
                Object {
                  "end": "2018-10-15T14:30:11.158224+00:00",
                  "start": "2018-10-15T14:30:11.009872+00:00",
                },
              ],
            },
            "type": "TestGroupReport",
            "uid": "6fc5c008-4d1a-454e-80b6-74bdc9bca49e",
          },
        ],
        "logs": Array [],
        "name": "Primary",
        "status": "failed",
        "status_override": null,
        "tags": Object {
          "simple": Array [
            "server",
          ],
        },
        "timer": Object {
          "run": Array [
            Object {
              "end": "2018-10-15T14:30:11.159661+00:00",
              "start": "2018-10-15T14:30:11.009705+00:00",
            },
          ],
          "setup": Array [
            Object {
              "end": "2018-10-15T14:30:11.008995+00:00",
              "start": "2018-10-15T14:30:10.079745+00:00",
            },
          ],
        },
        "type": "TestGroupReport",
        "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
      },
      Object {
        "category": "multitest",
        "description": null,
        "entries": Array [
          Object {
            "category": "testsuite",
            "description": null,
            "entries": Array [
              Object {
                "category": "testcase",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:12.010098+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:12.010094+00:00",
                  },
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:14.015698+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:14.015698+00:00",
                  },
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:32:21.123494+00:00",
                    "meta_type": "assertion",
                    "passed": false,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:32:21.123494+00:00",
                  },
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:33:37.015678+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:33:37.015678+00:00",
                  },
                ],
                "logs": Array [],
                "name": "test_equality_passing",
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:12.132214+00:00",
                      "start": "2018-10-15T14:30:12.010072+00:00",
                    },
                  ],
                },
                "type": "TestCaseReport",
                "uid": "f73bd6ea-d378-437b-a5db-00d9e427f36a",
              },
            ],
            "logs": Array [],
            "name": "GammaSuite",
            "status": "passed",
            "status_override": null,
            "tags": Object {},
            "timer": Object {
              "run": Array [
                Object {
                  "end": "2018-10-15T14:30:12.158224+00:00",
                  "start": "2018-10-15T14:30:12.009872+00:00",
                },
              ],
            },
            "type": "TestGroupReport",
            "uid": "08d4c671-d55d-49d4-96ba-dc654d12be26",
          },
        ],
        "logs": Array [],
        "name": "Secondary",
        "status": "passed",
        "status_override": null,
        "tags": Object {},
        "timer": Object {
          "run": Array [
            Object {
              "end": "2018-10-15T14:30:12.159661+00:00",
              "start": "2018-10-15T14:30:12.009705+00:00",
            },
          ],
          "setup": Array [
            Object {
              "end": "2018-10-15T14:30:12.008705+00:00",
              "start": "2018-10-15T14:30:11.879705+00:00",
            },
          ],
          "teardown": Array [
            Object {
              "end": "2018-10-15T14:30:12.645329+00:00",
              "start": "2018-10-15T14:30:12.160132+00:00",
            },
          ],
        },
        "type": "TestGroupReport",
        "uid": "8c3c7e6b-48e8-40cd-86db-8c8aed2592c8",
      },
    ]
  }
  interactive={false}
  selectedUid="520a92e4-325e-4077-93e6-55d7091a3f83"
/>
`;

exports[`Nav with TreeView shallow renders and matches snapshot 1`] = `
<TreeViewNav
  displayEmpty={true}
  displaySkipped={true}
  entries={
    Array [
      Object {
        "category": "multitest",
        "description": null,
        "entries": Array [
          Object {
            "category": "testsuite",
            "description": null,
            "entries": Array [
              Object {
                "category": "testcase",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:11.010098+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:11.010094+00:00",
                  },
                ],
                "logs": Array [],
                "name": "test_equality_passing",
                "status": "passed",
                "status_override": null,
                "tags": Object {
                  "colour": Array [
                    "white",
                  ],
                },
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:11.132214+00:00",
                      "start": "2018-10-15T14:30:11.010072+00:00",
                    },
                  ],
                },
                "type": "TestCaseReport",
                "uid": "736706ef-ba65-475d-96c5-f2855f431028",
              },
              Object {
                "category": "testcase",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:11.510098+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:11.510094+00:00",
                  },
                ],
                "logs": Array [],
                "name": "test_equality_passing2",
                "status": "failed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:11.632214+00:00",
                      "start": "2018-10-15T14:30:11.510072+00:00",
                    },
                  ],
                },
                "type": "TestCaseReport",
                "uid": "78686a4d-7b94-4ae6-ab50-d9960a7fb714",
              },
            ],
            "logs": Array [],
            "name": "AlphaSuite",
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "timer": Object {
              "run": Array [
                Object {
                  "end": "2018-10-15T14:30:11.158224+00:00",
                  "start": "2018-10-15T14:30:11.009872+00:00",
                },
              ],
            },
            "type": "TestGroupReport",
            "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
          },
          Object {
            "category": "testsuite",
            "description": null,
            "entries": Array [
              Object {
                "category": "testcase",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:11.010098+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:11.010094+00:00",
                  },
                ],
                "logs": Array [],
                "name": "test_equality_passing",
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:11.132214+00:00",
                      "start": "2018-10-15T14:30:11.010072+00:00",
                    },
                  ],
                },
                "type": "TestCaseReport",
                "uid": "8865a23d-1823-4c8d-ab37-58d24fc8ac05",
              },
            ],
            "logs": Array [],
            "name": "BetaSuite",
            "status": "passed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "client",
              ],
            },
            "timer": Object {
              "run": Array [
                Object {
                  "end": "2018-10-15T14:30:11.158224+00:00",
                  "start": "2018-10-15T14:30:11.009872+00:00",
                },
              ],
            },
            "type": "TestGroupReport",
            "uid": "6fc5c008-4d1a-454e-80b6-74bdc9bca49e",
          },
        ],
        "logs": Array [],
        "name": "Primary",
        "status": "failed",
        "status_override": null,
        "tags": Object {
          "simple": Array [
            "server",
          ],
        },
        "timer": Object {
          "run": Array [
            Object {
              "end": "2018-10-15T14:30:11.159661+00:00",
              "start": "2018-10-15T14:30:11.009705+00:00",
            },
          ],
          "setup": Array [
            Object {
              "end": "2018-10-15T14:30:11.008995+00:00",
              "start": "2018-10-15T14:30:10.079745+00:00",
            },
          ],
        },
        "type": "TestGroupReport",
        "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
      },
      Object {
        "category": "multitest",
        "description": null,
        "entries": Array [
          Object {
            "category": "testsuite",
            "description": null,
            "entries": Array [
              Object {
                "category": "testcase",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:12.010098+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:12.010094+00:00",
                  },
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:30:14.015698+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:30:14.015698+00:00",
                  },
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:32:21.123494+00:00",
                    "meta_type": "assertion",
                    "passed": false,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:32:21.123494+00:00",
                  },
                  Object {
                    "category": "DEFAULT",
                    "description": "passing equality",
                    "first": 1,
                    "label": "==",
                    "line_no": 24,
                    "machine_time": "2018-10-15T15:33:37.015678+00:00",
                    "meta_type": "assertion",
                    "passed": true,
                    "second": 1,
                    "type": "Equal",
                    "utc_time": "2018-10-15T14:33:37.015678+00:00",
                  },
                ],
                "logs": Array [],
                "name": "test_equality_passing",
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:12.132214+00:00",
                      "start": "2018-10-15T14:30:12.010072+00:00",
                    },
                  ],
                },
                "type": "TestCaseReport",
                "uid": "f73bd6ea-d378-437b-a5db-00d9e427f36a",
              },
            ],
            "logs": Array [],
            "name": "GammaSuite",
            "status": "passed",
            "status_override": null,
            "tags": Object {},
            "timer": Object {
              "run": Array [
                Object {
                  "end": "2018-10-15T14:30:12.158224+00:00",
                  "start": "2018-10-15T14:30:12.009872+00:00",
                },
              ],
            },
            "type": "TestGroupReport",
            "uid": "08d4c671-d55d-49d4-96ba-dc654d12be26",
          },
        ],
        "logs": Array [],
        "name": "Secondary",
        "status": "passed",
        "status_override": null,
        "tags": Object {},
        "timer": Object {
          "run": Array [
            Object {
              "end": "2018-10-15T14:30:12.159661+00:00",
              "start": "2018-10-15T14:30:12.009705+00:00",
            },
          ],
          "setup": Array [
            Object {
              "end": "2018-10-15T14:30:12.008705+00:00",
              "start": "2018-10-15T14:30:11.879705+00:00",
            },
          ],
          "teardown": Array [
            Object {
              "end": "2018-10-15T14:30:12.645329+00:00",
              "start": "2018-10-15T14:30:12.160132+00:00",
            },
          ],
        },
        "type": "TestGroupReport",
        "uid": "8c3c7e6b-48e8-40cd-86db-8c8aed2592c8",
      },
    ]
  }
  interactive={false}
  selected={
    Array [
      Object {
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {
                      "colour": Array [
                        "white",
                      ],
                    },
                    "timer": Object {
                      "run": Array [
                        Object {
                          "end": "2018-10-15T14:30:11.132214+00:00",
                          "start": "2018-10-15T14:30:11.010072+00:00",
                        },
                      ],
                    },
                    "type": "TestCaseReport",
                    "uid": "736706ef-ba65-475d-96c5-f2855f431028",
                  },
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.510098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.510094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing2",
                    "status": "failed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Array [
                        Object {
                          "end": "2018-10-15T14:30:11.632214+00:00",
                          "start": "2018-10-15T14:30:11.510072+00:00",
                        },
                      ],
                    },
                    "type": "TestCaseReport",
                    "uid": "78686a4d-7b94-4ae6-ab50-d9960a7fb714",
                  },
                ],
                "logs": Array [],
                "name": "AlphaSuite",
                "status": "failed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "server",
                  ],
                },
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:11.158224+00:00",
                      "start": "2018-10-15T14:30:11.009872+00:00",
                    },
                  ],
                },
                "type": "TestGroupReport",
                "uid": "cb144b10-bdb0-44d3-9170-d8016dd19ee7",
              },
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:11.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:11.010094+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Array [
                        Object {
                          "end": "2018-10-15T14:30:11.132214+00:00",
                          "start": "2018-10-15T14:30:11.010072+00:00",
                        },
                      ],
                    },
                    "type": "TestCaseReport",
                    "uid": "8865a23d-1823-4c8d-ab37-58d24fc8ac05",
                  },
                ],
                "logs": Array [],
                "name": "BetaSuite",
                "status": "passed",
                "status_override": null,
                "tags": Object {
                  "simple": Array [
                    "client",
                  ],
                },
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:11.158224+00:00",
                      "start": "2018-10-15T14:30:11.009872+00:00",
                    },
                  ],
                },
                "type": "TestGroupReport",
                "uid": "6fc5c008-4d1a-454e-80b6-74bdc9bca49e",
              },
            ],
            "logs": Array [],
            "name": "Primary",
            "status": "failed",
            "status_override": null,
            "tags": Object {
              "simple": Array [
                "server",
              ],
            },
            "timer": Object {
              "run": Array [
                Object {
                  "end": "2018-10-15T14:30:11.159661+00:00",
                  "start": "2018-10-15T14:30:11.009705+00:00",
                },
              ],
              "setup": Array [
                Object {
                  "end": "2018-10-15T14:30:11.008995+00:00",
                  "start": "2018-10-15T14:30:10.079745+00:00",
                },
              ],
            },
            "type": "TestGroupReport",
            "uid": "21739167-b30f-4c13-a315-ef6ae52fd1f7",
          },
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:12.010098+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:12.010094+00:00",
                      },
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:30:14.015698+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:30:14.015698+00:00",
                      },
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:32:21.123494+00:00",
                        "meta_type": "assertion",
                        "passed": false,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:32:21.123494+00:00",
                      },
                      Object {
                        "category": "DEFAULT",
                        "description": "passing equality",
                        "first": 1,
                        "label": "==",
                        "line_no": 24,
                        "machine_time": "2018-10-15T15:33:37.015678+00:00",
                        "meta_type": "assertion",
                        "passed": true,
                        "second": 1,
                        "type": "Equal",
                        "utc_time": "2018-10-15T14:33:37.015678+00:00",
                      },
                    ],
                    "logs": Array [],
                    "name": "test_equality_passing",
                    "status": "passed",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {
                      "run": Array [
                        Object {
                          "end": "2018-10-15T14:30:12.132214+00:00",
                          "start": "2018-10-15T14:30:12.010072+00:00",
                        },
                      ],
                    },
                    "type": "TestCaseReport",
                    "uid": "f73bd6ea-d378-437b-a5db-00d9e427f36a",
                  },
                ],
                "logs": Array [],
                "name": "GammaSuite",
                "status": "passed",
                "status_override": null,
                "tags": Object {},
                "timer": Object {
                  "run": Array [
                    Object {
                      "end": "2018-10-15T14:30:12.158224+00:00",
                      "start": "2018-10-15T14:30:12.009872+00:00",
                    },
                  ],
                },
                "type": "TestGroupReport",
                "uid": "08d4c671-d55d-49d4-96ba-dc654d12be26",
              },
            ],
            "logs": Array [],
            "name": "Secondary",
            "status": "passed",
            "status_override": null,
            "tags": Object {},
            "timer": Object {
              "run": Array [
                Object {
                  "end": "2018-10-15T14:30:12.159661+00:00",
                  "start": "2018-10-15T14:30:12.009705+00:00",
                },
              ],
              "setup": Array [
                Object {
                  "end": "2018-10-15T14:30:12.008705+00:00",
                  "start": "2018-10-15T14:30:11.879705+00:00",
                },
              ],
              "teardown": Array [
                Object {
                  "end": "2018-10-15T14:30:12.645329+00:00",
                  "start": "2018-10-15T14:30:12.160132+00:00",
                },
              ],
            },
            "type": "TestGroupReport",
            "uid": "8c3c7e6b-48e8-40cd-86db-8c8aed2592c8",
          },
        ],
        "meta": Object {},
        "name": "Sample Testplan",
        "status": "failed",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {
          "run": Array [
            Object {
              "end": "2018-10-15T14:30:11.296158+00:00",
              "start": "2018-10-15T14:30:10.998071+00:00",
            },
          ],
        },
        "uid": "520a92e4-325e-4077-93e6-55d7091a3f83",
      },
    ]
  }
  selectedUid="520a92e4-325e-4077-93e6-55d7091a3f83"
/>
`;
